// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes start components StartPage redirects to organizations page if selected organization not found or set 1`] = `
<div>
  All organizations
</div>
`;

exports[`routes start components StartPage redirects to selected organization if set 1`] = `
<div>
  My organization
</div>
`;

exports[`routes start components StartPage renders loading icon as long as selectedOrgnaization is not loaded 1`] = `
<div
  className="LoadingIcon-container-1"
>
  <div
    className="MuiCircularProgress-root-3 MuiCircularProgress-colorPrimary-6 MuiCircularProgress-indeterminate-5 LoadingIcon-icon-2"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-8"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-9 MuiCircularProgress-circleIndeterminate-11"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;
